<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/header_sms">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="@string/key_enable_sms"
            android:title="@string/enable_sms" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue=""
            android:key="@string/key_target_sms"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_sms"
            android:summary="@string/target_summary_sms" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/header_telegram">

        <SwitchPreference
            android:key="@string/key_enable_telegram"
            android:title="@string/enable_telegram" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_target_telegram"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_telegram" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_telegram_apikey"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_telegram_apikey" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/header_web">

        <SwitchPreference
            android:key="@string/key_enable_web"
            android:title="@string/enable_web" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_target_web"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_web"
            android:summary="@string/target_summary_web" />

    </PreferenceCategory>

</PreferenceScreen>
